--- a/SpotiFree/en.lproj/MainMenu.xib
+++ b/SpotiFree/en.lproj/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1060" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -72,6 +72,7 @@
         <customObject id="tNn-uN-YjJ" customClass="MenuController">
             <connections>
                 <outlet property="statusMenu" destination="koj-en-MeX" id="fX3-a7-hc5"/>
+                <outlet property="statusMenuItem" destination="bJe-eM-xic" id="3da-zS-Bqa"/>
             </connections>
         </customObject>
         <customObject id="be6-Wd-Plc" customClass="SUUpdater"/>
