--- a/Spotifree/en.lproj/MainMenu.xib
+++ b/Spotifree/en.lproj/MainMenu.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6751"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9060"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -23,12 +24,6 @@
                     <modifierMask key="keyEquivalentModifierMask"/>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="f2f-Gr-21g"/>
-                <menuItem title="About Spotifree" id="aBA-bl-LWc">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                    <connections>
-                        <action selector="aboutItemPushed:" target="tNn-uN-YjJ" id="TdG-1X-Y6M"/>
-                    </connections>
-                </menuItem>
                 <menuItem title="Updates" id="J8i-tu-W5K">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Updates" id="N5r-xW-8BH">
@@ -55,6 +50,12 @@
                         </items>
                     </menu>
                 </menuItem>
+                <menuItem title="Hide Icon" id="WmV-rW-z2G">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="hideMenuBarIconClicked:" target="tNn-uN-YjJ" id="UdL-On-7Ka"/>
+                    </connections>
+                </menuItem>
                 <menuItem isSeparatorItem="YES" id="Hn0-oo-8qy"/>
                 <menuItem title="Run At Login" id="4AH-U5-7WK">
                     <modifierMask key="keyEquivalentModifierMask"/>
@@ -69,13 +70,19 @@
                     </connections>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="DUn-qf-wsu"/>
-                <menuItem title="Hide Icon" id="YvX-4q-qoG">
+                <menuItem title="Donate" id="YvX-4q-qoG">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
-                        <action selector="hideMenuBarIconClicked:" target="tNn-uN-YjJ" id="6uu-yC-a78"/>
+                        <action selector="donateLinkClicked:" target="tNn-uN-YjJ" id="Y3G-mg-rdQ"/>
                     </connections>
                 </menuItem>
-                <menuItem title="Quit Spotifree" keyEquivalent="q" id="Mma-Se-B4t">
+                <menuItem title="About" id="aBA-bl-LWc">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="aboutItemPushed:" target="tNn-uN-YjJ" id="TdG-1X-Y6M"/>
+                    </connections>
+                </menuItem>
+                <menuItem title="Quit" keyEquivalent="q" id="Mma-Se-B4t">
                     <connections>
                         <action selector="terminate:" target="-1" id="lda-4T-bhe"/>
                     </connections>
